--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ aside, main {
 main {
   padding-left: 0!important;
 }
-
 aside .inner, main .inner {
   background: #fff;
   padding: 20px;
@@ -25,6 +24,23 @@ h2 {
 h3 {
   font-size: 16px;
   font-weight: 700;
+  margin-bottom: 0;
+}
+h4 {
+  font-size: 15px;
+  font-weight: 700;
+}
+section h2 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f0f0f0;
+  margin-bottom: 20px;
+}
+a {
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 .divider {
@@ -34,7 +50,7 @@ h3 {
 }
 .fa {
   color: #777;
-  margin-right: 10px;
+  margin-right: 5px;
   top: 4px;
 }
 
@@ -43,8 +59,18 @@ h3 {
 }
 .profileLinks li a {
   text-decoration: none;
+  color: #000;
+}
+.profileLinks li a:hover {
+  color: #23527c;
 }
 
+.about, .work, .education, .skills {
+  margin-bottom: 30px;
+}
 .skills-list li {
   font-size: 18px;
+}
+.workDates {
+  color: #777;
 }
